# bimanual-franka

./: .gitignore  README.md  pyproject.toml  setup.cfg
resources/bi-franka/: bi-franka.xml  scene.xml
