[metadata]
name = bimanual-franka
version = 0.0.1
description = A simple setup for a bimanual Franka in MuJoCo
long_description = file: README.md
long_description_content_type = text/markdown
author = Wilbert Pumacay
author_email = wilbert.pumacay@ucsp.edu.pe
license = MIT License
url = https://github.com/wpumacay/bimanual-franka

[options]
packages = find:
python_requires = >=3.10

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    venv

max-line-length = 80